    dh_override_configure target
  * use wrap-and-sort on debian/control
  * switch to debhelper (>= 9) in debian/control and bump debian/compat level
    to 9 to add hardening flags automatically
  * debian/control: fix spelling error in description
  * change debian/copyright to machine readable format, update copyright
    information

 -- Jan Dittberner <jandd@debian.org>  Wed, 08 Oct 2014 20:07:01 +0200

libnss-pgsql (1.4.0debian-5) unstable; urgency=low

  * Add Vcs-Git and Vcs-Browser fields to debian/control

 -- Jan Dittberner <jandd@debian.org>  Sun, 06 Feb 2011 14:58:44 +0100

libnss-pgsql (1.4.0debian-4) experimental; urgency=low

  * Add myself to uploaders.
  * switch from dpatch to quilt using
    /usr/share/doc/quilt/examples/dpatch2quilt.sh
    - rename debian/patches/*.dpatch to debian/patches/*.patch
    - add debian/patches/series, remove debian/patches/00list
    - debian/control: remove dpatch from Build-Depends
  * switch to source format 3.0 (quilt)
    - add debian/source/format
    - debian/rules: remove patching
  * switch to debhelper 7 and simplified dh rules
    - set debian/compat to 7
    - set debhelper Build-Depends in debian/control to (>= 7.0.50~)
    - add ${misc:Depends} to Depends in debian/control
    - use simplified rules in debian/rules
  * add debian/libnss-pgsql2.symbols
  * add debian/libnss-pgsql2.doc-base to register documentation with
    doc-base
  * add Homepage field to debian/control
  * improve description of libnss-pgsql2 in debian/control
  * bump Standards-Version in debian/control to 3.9.1
  * add a dummy debian/watch to make lintian happy
  * Fix "NSS continously reports 'Could not connect to the database'
    because of file permission issues" with patch
    debian/patches/08_supress_inappropriate_warnings.patch (Closes: #525953)

 -- Jan Dittberner <jandd@debian.org>  Mon, 27 Sep 2010 16:27:24 +0200

libnss-pgsql (1.4.0debian-3) unstable; urgency=low
