@@ -16,6 +16,8 @@ libnss-pgsql (1.4.0debian-6) UNRELEASED; urgency=medium
   * debian/control: fix spelling error in description
   * change debian/copyright to machine readable format, update copyright
     information
+  * optimize override_dh_auto_clean and override_dh_install in
+    debian/rules
 
  -- Jan Dittberner <jandd@debian.org>  Wed, 08 Oct 2014 20:07:01 +0200
 
